--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^19.1.3",
     "axios": "^0.27.2",
     "gh-pages": "^6.3.0",
     "joi": "^17.13.3",
@@ -52,6 +50,8 @@
   "main": "src/index.tsx",
   "devDependencies": {
     "@babel/core": "^7.22.0",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
