--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "main": "src/index.tsx",
   "devDependencies": {
     "@babel/core": "^7.22.0",
-    "@types/react": "18",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "18",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
