--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "normalize.css": "^8.0.1",
     "react": "18",
     "react-dom": "18",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "6",
     "react-scripts": "^3.0.1",
-    "typescript": "3.4.x",
+    "typescript": "^5.8.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -50,8 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.0",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "18",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-dom": "^19.1.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "postcss": "^8.5.3",
