--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app-platform-demo-frontend",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://piserviceshub.github.io/PiWork",
+
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -58,6 +60,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "homepage": "https://piserviceshub.github.io/PiWork"
+  "description": ""
+ 
 }
