--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "app-platform-demo-frontend",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,7 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "18",
     "react-dom": "18",
-    "react-router-dom": "6",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "^3.0.1",
     "typescript": "^5.8.3",
     "web-vitals": "^1.0.1"
@@ -52,6 +51,7 @@
     "@babel/core": "^7.22.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "postcss": "^8.5.3",
