Fix asset paths and routing for Netlify

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "homepage": "https://piserviceshub.github.io/PiWork"
+  "homepage": "."
 }
